--- a/new-pompeius/new-pompeius/Base.lproj/Main.storyboard
+++ b/new-pompeius/new-pompeius/Base.lproj/Main.storyboard
@@ -395,7 +395,8 @@
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aJv-eT-j8m">
                                 <rect key="frame" x="167" y="109" width="80" height="80"/>
-                                <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
+                                <color key="tintColor" red="1" green="0.38399932590000002" blue="0.40756723579999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="KDY-FM-nPu"/>
                                     <constraint firstAttribute="height" constant="80" id="eRA-VS-nk2"/>
