Created the second view controller that deals with questions

--- a/new-pompeius/new-pompeius/Base.lproj/Main.storyboard
+++ b/new-pompeius/new-pompeius/Base.lproj/Main.storyboard
@@ -786,6 +786,7 @@
                                 <state key="normal" image="Group 2-1"/>
                                 <connections>
                                     <action selector="beginSurveyButton:" destination="AIX-8G-4fm" eventType="touchUpInside" id="7Ao-kA-sec"/>
+                                    <segue destination="wBL-WL-Yq7" kind="presentation" identifier="toQuestions" modalPresentationStyle="fullScreen" id="9mg-Vv-4vZ"/>
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Survey Text-1" translatesAutoresizingMaskIntoConstraints="NO" id="taL-FM-p9g">
@@ -810,11 +811,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i3F-Yi-HrJ">
-                                <rect key="frame" x="79" y="748" width="256" height="61"/>
+                                <rect key="frame" x="79" y="693" width="256" height="61"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="Group 2"/>
                                 <connections>
                                     <action selector="continueButton:" destination="wBL-WL-Yq7" eventType="touchUpInside" id="OkT-HA-tw2"/>
+                                    <segue destination="agD-a6-dM5" kind="presentation" identifier="nextQuestions" modalPresentationStyle="fullScreen" id="Rkx-O2-9Wm"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FOG-4N-H0x">
@@ -827,10 +829,6 @@
                                     <segue destination="AIX-8G-4fm" kind="presentation" identifier="backToBeginSurvery" modalPresentationStyle="fullScreen" id="8cY-Jf-bP6"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Group 119-1" translatesAutoresizingMaskIntoConstraints="NO" id="2Of-fH-5tt">
-                                <rect key="frame" x="163" y="771" width="306" height="163"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="How important is religion to you" translatesAutoresizingMaskIntoConstraints="NO" id="3iu-aw-OBX">
                                 <rect key="frame" x="105" y="84" width="205" height="109"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -850,6 +848,7 @@
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iDs-sY-qo4">
                                 <rect key="frame" x="59" y="175" width="38" height="38"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="tintColor" red="1" green="0.38399932590000002" blue="0.40756723579999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" image="Circle 1"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bwH-ix-z2F">
@@ -937,6 +936,10 @@
                                 <rect key="frame" x="323" y="383" width="28" height="15"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Group 119-1" translatesAutoresizingMaskIntoConstraints="NO" id="2Of-fH-5tt">
+                                <rect key="frame" x="88" y="715" width="306" height="163"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="lSA-J4-jth"/>
@@ -949,8 +952,62 @@
             </objects>
             <point key="canvasLocation" x="4134.7826086956529" y="867.85714285714278"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="OGV-Xn-YsO">
+            <objects>
+                <viewController id="agD-a6-dM5" customClass="Q2ViewController" customModule="new_pompeius" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8Td-wV-Gjr">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="How important is religion to you" translatesAutoresizingMaskIntoConstraints="NO" id="jX6-Em-06g">
+                                <rect key="frame" x="105" y="113" width="205" height="109"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="How important is your education to you" translatesAutoresizingMaskIntoConstraints="NO" id="OWb-M6-7Nc">
+                                <rect key="frame" x="87" y="258" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="How important is career success to you" translatesAutoresizingMaskIntoConstraints="NO" id="1PX-GN-9Wm">
+                                <rect key="frame" x="87" y="451" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wyh-Wa-Rdr">
+                                <rect key="frame" x="36" y="68" width="27" height="27"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="back button"/>
+                                <connections>
+                                    <action selector="backButton:" destination="wBL-WL-Yq7" eventType="touchUpInside" id="dcr-Xs-aD7"/>
+                                    <action selector="backButton:" destination="agD-a6-dM5" eventType="touchUpInside" id="w4T-FK-O2i"/>
+                                    <action selector="continueButton:" destination="wBL-WL-Yq7" eventType="touchUpInside" id="c8j-hH-6aF"/>
+                                    <segue destination="wBL-WL-Yq7" kind="presentation" identifier="backToQ1Set" modalPresentationStyle="fullScreen" id="oUa-R8-MTl"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oa7-IZ-WLc">
+                                <rect key="frame" x="79" y="745" width="256" height="61"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="Group 2"/>
+                                <connections>
+                                    <action selector="continueButton:" destination="wBL-WL-Yq7" eventType="touchUpInside" id="Pac-69-zGQ"/>
+                                    <action selector="continueButton:" destination="agD-a6-dM5" eventType="touchUpInside" id="d2p-yn-nv6"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="How ambitious would you say you are" translatesAutoresizingMaskIntoConstraints="NO" id="kmJ-oe-vtN">
+                                <rect key="frame" x="87" y="570" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="CnZ-XI-Ngd"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PXZ-zh-hvf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4857" y="868"/>
+        </scene>
     </scenes>
     <inferredMetricsTieBreakers>
+        <segue reference="oUa-R8-MTl"/>
         <segue reference="8cY-Jf-bP6"/>
         <segue reference="0mY-ut-H27"/>
         <segue reference="zVE-cr-XtJ"/>
